[gd_scene load_steps=23 format=2]

[ext_resource path="res://WorldElement/Gun.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/circle.png" type="Texture" id=2]
[ext_resource path="res://WorldElement/effects.shader" type="Shader" id=3]
[ext_resource path="res://Player/player.gd" type="Script" id=4]
[ext_resource path="res://sprites/life_bar_brown.png" type="Texture" id=5]
[ext_resource path="res://sprites/rocket_2.png" type="Texture" id=6]
[ext_resource path="res://sprites/life_bar_red.png" type="Texture" id=7]
[ext_resource path="res://sprites/muzzel_flash.png" type="Texture" id=8]
[ext_resource path="res://sound/fx/fire_2.wav" type="AudioStream" id=9]
[ext_resource path="res://Player/DirectionIndicator.tscn" type="PackedScene" id=10]
[ext_resource path="res://Player/IndicatorContainer.gd" type="Script" id=12]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.0
height = 25.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 25.0

[sub_resource type="CircleShape2D" id=3]
radius = 169.73

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/effect = 0
shader_param/blur = 0.0
shader_param/offset = Vector2( 0, 0 )
shader_param/resulation = Vector2( 1024, 600 )
shader_param/pixel_size = 6

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.182266, 0.793103, 1 )
colors = PoolColorArray( 0.55481, 0.717689, 0.789062, 1, 0.925781, 0.524877, 0.329086, 1, 1, 0, 0.328125, 1, 0.996078, 0.980392, 0.964706, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
max_value = 1.5
_data = [ Vector2( 0, 0.4596 ), 0.0, 3.44716, 0, 0, Vector2( 0.0695347, 1.5 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.4208 ), -0.41835, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
trail_divisor = 2
emission_shape = 2
emission_box_extents = Vector3( 10, 5, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 1.44334e-43
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[sub_resource type="CircleShape2D" id=10]
radius = 608.105

[sub_resource type="CircleShape2D" id=11]
radius = 244.245

[node name="player" type="KinematicBody2D" groups=["frozeable", "player"]]
script = ExtResource( 4 )

[node name="muzzel_flash" type="Sprite" parent="."]
visible = false
position = Vector2( -0.4032, -47.979 )
scale = Vector2( 0.4, 0.4 )
z_index = 1
texture = ExtResource( 8 )

[node name="body" type="Sprite" parent="."]
light_mask = 2
scale = Vector2( 0.421439, 0.421439 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="HitArea" type="Area2D" parent="." groups=["player"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="SenceArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SenceArea"]
visible = false
shape = SubResource( 3 )

[node name="BulletStartPosition" type="Position2D" parent="."]
position = Vector2( 0, -25 )

[node name="BulletContainer" type="Node" parent="BulletStartPosition"]

[node name="Weapon" type="Position2D" parent="."]
position = Vector2( 0, -25 )

[node name="Gun" parent="Weapon" instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EnergyBar" type="TextureProgress" parent="CanvasLayer"]
margin_left = 10.0
margin_top = 9.0975
margin_right = 160.0
margin_bottom = 22.0975
step = 0.1
value = 80.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource( 4 )
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="smoke" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 0, 32.25 )
emitting = false
amount = 20
lifetime = 0.2
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 2 )

[node name="player_camera" type="Camera2D" parent="."]
current = true
smoothing_speed = 100.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="tween" type="Tween" parent="."]

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.03
one_shot = true

[node name="EffectTimer" type="Timer" parent="."]
one_shot = true

[node name="ColorModulateTimer" type="Timer" parent="."]
one_shot = true

[node name="FireFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
mix_target = 2

[node name="Node" type="Node" parent="."]

[node name="IndicatorContainer" type="Node2D" parent="."]
position = Vector2( 0, 2 )
script = ExtResource( 12 )

[node name="DirectionIndicator" parent="IndicatorContainer" instance=ExtResource( 10 )]

[node name="EnemySensor" type="Area2D" parent="IndicatorContainer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IndicatorContainer/EnemySensor"]
visible = false
shape = SubResource( 10 )

[node name="EnemyDeSensor" type="Area2D" parent="IndicatorContainer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IndicatorContainer/EnemyDeSensor"]
visible = false
shape = SubResource( 11 )

[node name="LightningStater" type="Node2D" parent="."]
position = Vector2( 0, -25 )

[connection signal="area_entered" from="HitArea" to="." method="_on_player_damage_area_area_entered"]
[connection signal="value_changed" from="CanvasLayer/EnergyBar" to="." method="_on_player_life_value_changed"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="timeout" from="ColorModulateTimer" to="." method="_on_ColorModulateTimer_timeout"]
[connection signal="body_entered" from="IndicatorContainer/EnemySensor" to="IndicatorContainer" method="_on_EnemySensor_body_entered"]
[connection signal="body_exited" from="IndicatorContainer/EnemySensor" to="IndicatorContainer" method="_on_EnemySensor_body_exited"]
[connection signal="body_entered" from="IndicatorContainer/EnemyDeSensor" to="IndicatorContainer" method="_on_EnemyDeSensor_body_entered"]
[connection signal="body_exited" from="IndicatorContainer/EnemyDeSensor" to="IndicatorContainer" method="_on_EnemyDeSensor_body_exited"]
